--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
                 <a href="/portfolio" class="nav-link">Portfolio</a>
 
                 <div class="dropdown" id="dropdown">
+
+                    <a href="/portfolio/auto" class="dropdown-link">Auto</a>
                     
                     <a href="/portfolio/people" class="dropdown-link">People</a>
 
@@ -145,13 +147,12 @@
 
     <section class="work" id="work">
 
-        <h2 class="work-heading">We bring stories to life in under 24 hours</h2>
+        <h2 class="work-heading">We bring stories to life in under 48 hours</h2>
 
         <div class="divider"></div>
 
         <p class="text">
-            We help you elevate your brand's social media presence through compelling photography that attracts and engages with new and existing customers. 
-            We deliver your finalised images within 24 hours of completing the photoshot and leave our clients across Brisbane, Australia excited to work with us again.
+            We help you elevate your brand's social media presence through compelling photography that attracts and engages with new and existing customers. We deliver your finalised images within 48 hours of completing the photo shoot and leave our clients across Brisbane, Australia excited to work with us again.
         </p>
 
         <div class="carousel">
@@ -320,7 +321,7 @@
 
                         <li class="list-item">
 
-                            <span class="list-link">hello@picbyadam.net</span>
+                            <span class="list-link">hello@picbyadam.com</span>
                             
                         </li>
 
