--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -40,6 +40,8 @@
                 <a href="/portfolio" class="nav-link">Portfolio</a>
 
                 <div class="dropdown" id="dropdown">
+
+                    <a href="/portfolio/auto" class="dropdown-link">Auto</a>
                     
                     <a href="/portfolio/people" class="dropdown-link">People</a>
 
@@ -125,77 +127,90 @@
 
     </section>
 
-    <header class="header-w-divider">
+    <header class="header-w-divider no-border">
 
         <h1 class="page-title">Content That Matters</h1>
 
         <div class="divider"></div>
 
-        <img src="../img/Lens.png" alt="Camera Lens" class="header-img lens">
-
     </header>
 
     <section class="latest-work-section">
 
-        <div class="content">
+        <div class="logo-box">
+            <img class="logo" src="../img/Portfolio Home Page/Logo PNG.png" alt="PicByAdam Logo">
+        </div>
 
-            <h2 class="title">Latest Work</h2>
+        <div class="text-box">
+            <h3 class="text">View our latest <span class="primary">projects</span> and <span class="primary">shoots</span></h3>
+        </div>
 
-            <p class="desc">
-                View our latest projects and shoots as well as a collection of our favourite works. We'd love to bring 
-                our skillset to collaborate on your next project. Feel free to get in touch today.
+    </section>
+
+    <section class="work-category-section">
+        <a class="box automotive" href="./auto">
+            <div class="content">
+                <h4 class="work-title">Automotive</h4>
+                <i class="far fa-arrow-alt-circle-right icon"></i>
+            </div>
+        </a>
+        <a class="box products" href="./products/">
+            <div class="content">
+                <h4 class="work-title">Products</h4>
+                <i class="far fa-arrow-alt-circle-right icon"></i>
+            </div>
+        </a>
+        <a class="box people" href="./people">
+            <div class="content">
+                <h4 class="work-title">People</h4>
+                <i class="far fa-arrow-alt-circle-right icon"></i>
+            </div>
+        </a>
+        <a class="box plates" href="./plates">
+            <div class="content">
+                <h4 class="work-title">Plates</h4>
+                <i class="far fa-arrow-alt-circle-right icon"></i>
+            </div>
+        </a>
+    </section>
+
+    <section class="case-study-title-section">
+
+        <div class="text-box">
+            <h3 class="text">View case study <span class="primary">"breakdowns"</span> of our projects</h3>
+        </div>
+
+        <div class="icon-box">
+            <i class="far fa-arrow-alt-circle-down icon fa-4x"></i>
+        </div>
+
+    </section>
+
+    <section class="case-studies-section">
+        <div class="case-study-box">
+            <img src="/img/Portfolio Home Page/Shane King.jpg" class="img case-study-img">
+            <h4 class="title">Shane King</h4>
+            <div class="divider"></div>
+            <p class="desc">In this <span class="primary">case study</span>, PicByAdam worked with Shane King to create a series of digital content that connected the “King” Brand with their Australian audience. This was achieved through a photo series, daily instagram stories & a series of 
+                compelling captions.
+                </p>
+            <a href="people/case-study/shane" class="btn primary-filled">View The Full Project</a>
+        </div>
+        <div class="case-study-box">
+            <img src="/img/Portfolio Home Page/Group shot - 1.jpg" class="img case-study-img">
+            <h4 class="title">The Ring Shop</h4>
+            <div class="divider"></div>
+            <p class="desc"> In this <span class="primary">case study</span>, PicByAdam worked with TheRingShop to create  a series of lifestyle sets. Each showcases the rings in an environment native to its colour palette and design as well as a series of shots  with a hand model in versatile real life locations demonstrating what the rings look like on people.
             </p>
-
-            <a href="/#contact" class="btn primary-filled">Get In Touch</a>
-
+            <a href="products/case-study/the-ring-shop" class="btn primary-filled">View The Full Project</a>
         </div>
-
-        <div class="category-grid">
-
-            <a href="/portfolio/plates" class="category first">
-
-                <div class="lines">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
-
-                <h2 class="category-title">Plates</h2>
-
-                <i class="far fa-arrow-alt-circle-right icon"></i>
-
-            </a>
-
-            <a href="/portfolio/products" class="category second">
-
-                <div class="lines">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
-
-                <h2 class="category-title">Products</h2>
-
-                <i class="far fa-arrow-alt-circle-right icon"></i>
-
-            </a>
-
-            <a href="/portfolio/people" class="category third">
-
-                <div class="lines">
-                    <div class="line"></div>
-                    <div class="line"></div>
-                    <div class="line"></div>
-                </div>
-
-                <h2 class="category-title">People</h2>
-
-                <i class="far fa-arrow-alt-circle-right icon"></i>
-
-            </a>
-
+        <div class="case-study-box">
+            <img src="/img/Portfolio Home Page/Leannes Party.jpg" class="img case-study-img">
+            <h4 class="title">50th Birthday</h4>
+            <div class="divider"></div>
+            <p class="desc"> In this <span class="primary">case study</span>, PicByAdam worked with Leanne to capture her 50th Birthday Party celebrations. The goal of this project was to create memories that would allow Leanne to relive the party for years to come.  See how we accomplished this and created over 230 meaningful images showcasing the night!</p>
+            <a href="people/case-study/50th-birthday" class="btn primary-filled">View The Full Project</a>
         </div>
-
     </section>
 
     <footer class="large-footer">
