--- a/portfolio/people/index.html
+++ b/portfolio/people/index.html
@@ -40,6 +40,8 @@
                 <a href="/portfolio" class="nav-link">Portfolio</a>
 
                 <div class="dropdown" id="dropdown">
+
+                    <a href="/portfolio/auto" class="dropdown-link">Auto</a>
                     
                     <a href="/portfolio/people" class="dropdown-link active">People</a>
 
@@ -137,28 +139,23 @@
 
     <section class="case-study-section">
 
-        <article class="case-study">
-
-            <div class="content">
-
-                <h2 class="case-study-title">Shane King</h2>
-
-                <div class="divider"></div>
-
-                <p class="case-study-desc">
-                    In this case study, PicByAdam worked with Shane King to create a 
-                    series of digital content establishing the “King” Brand across platforms
-                     such as Instagram, Facebook, and Twitter. This was done through a 
-                     portrait photo series, automotive shots, and a sequence of compelling captions.
+        <div class="case-study-box">
+            <img src="/img/Portfolio Home Page/Shane King.jpg" class="img case-study-img">
+            <h4 class="title">Shane King</h4>
+            <div class="divider"></div>
+            <p class="desc">In this <span class="primary">case study</span>, PicByAdam worked with Shane King to create a series of digital content that connected the “King” Brand with their Australian audience. This was achieved through a photo series, daily instagram stories & a series of 
+                compelling captions.
                 </p>
+            <a href="case-study/shane" class="btn primary-filled">View The Full Project</a>
+        </div>
 
-                <a href="./case-study/" class="btn primary-filled">View The Full Project</a>
-
-            </div>
-
-            <img src="../../img/work/Portrait & Lifestyle/9.jpeg" class="case-study-img" alt="Shane King">
-
-        </article>
+        <div class="case-study-box">
+            <img src="/img/Portfolio Home Page/Leannes Party.jpg" class="img case-study-img">
+            <h4 class="title">50th Birthday</h4>
+            <div class="divider"></div>
+            <p class="desc"> In this <span class="primary">case study</span>, PicByAdam worked with Leanne to capture her 50th Birthday Party celebrations. The goal of this project was to create memories that would allow Leanne to relive the party for years to come.  See how we accomplished this and created over 230 meaningful images showcasing the night!</p>
+            <a href="case-study/50th-birthday" class="btn primary-filled">View The Full Project</a>
+        </div>
 
     </section>
 
