--- a/services/index.html
+++ b/services/index.html
@@ -40,6 +40,8 @@
                 <a href="/portfolio" class="nav-link">Portfolio</a>
 
                 <div class="dropdown" id="dropdown">
+
+                    <a href="/portfolio/auto" class="dropdown-link">Auto</a>
                     
                     <a href="/portfolio/people" class="dropdown-link">People</a>
 
@@ -199,13 +201,11 @@
 
                 <div class="content">
 
-                    <h2 class="service-heading">24 Hour Delivery</h2>
+                    <h2 class="service-heading">48 Hour Delivery</h2>
 
                     <div class="divider"></div>
 
-                    <p class="service-text">We know speed is vital to you and your business. That’s why
-                        we deliver your final products within 24 hours of completing the
-                        photo shoot.  <a href="/24-hour-disclaimer" class="link">(Disclaimer)</a></p>
+                    <p class="service-text">We know speed is vital to you and your business. That’s why we deliver your final products within 48 hours of completing the photo shoot.  <a href="/48-hour-disclaimer" class="link">(Disclaimer)</a></p>
 
                 </div>
 
@@ -348,7 +348,7 @@
 
                         <li class="list-item">
 
-                            <span class="list-link">hello@picbyadam.net</span>
+                            <span class="list-link">hello@picbyadam.com</span>
                             
                         </li>
 
