--- a/about/index.html
+++ b/about/index.html
@@ -40,6 +40,8 @@
                 <a href="/portfolio" class="nav-link">Portfolio</a>
 
                 <div class="dropdown" id="dropdown">
+
+                    <a href="/portfolio/auto" class="dropdown-link">Auto</a>
                     
                     <a href="/portfolio/people" class="dropdown-link">People</a>
 
@@ -167,7 +169,7 @@
 
                 <i class="icon far fa-paper-plane"></i>
 
-                <span class="text">hello@picbyadam.net</span>
+                <span class="text">hello@picbyadam.com</span>
 
             </div>
 
@@ -285,7 +287,7 @@
 
                         <li class="list-item">
 
-                            <span class="list-link">hello@picbyadam.net</span>
+                            <span class="list-link">hello@picbyadam.com</span>
                             
                         </li>
 
