Updated Email in Footer

--- a/portfolio/auto/index.html
+++ b/portfolio/auto/index.html
@@ -253,7 +253,7 @@
 
                         <li class="list-item">
 
-                            <span class="list-link">hello@picbyadam.net</span>
+                            <span class="list-link">hello@picbyadam.com</span>
                             
                         </li>
 
