--- a/portfolio/auto/index.html
+++ b/portfolio/auto/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PicByAdam - Automitive</title>
+    <title>PicByAdam - Automotive</title>
     <link rel="stylesheet" href="../../css/main.css" />
     <link rel="icon" href="../../favicon.ico?" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
@@ -129,7 +129,7 @@
 
     <header class="header-w-divider auto-bg">
 
-        <h1 class="page-title">Automitive & Bikes</h1>
+        <h1 class="page-title">Automotive & Bikes</h1>
 
         <div class="divider"></div>
 
