--- a/portfolio/people/case-study/50th-birthday/index.html
+++ b/portfolio/people/case-study/50th-birthday/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PicByAdam - The Ring Shop Case Study</title>
+    <title>PicByAdam - 50th Birthday Case Study</title>
     <link rel="stylesheet" href="../../../../css/main.css" />
     <link rel="icon" href="../../../../favicon.ico?" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" integrity="sha512-+4zCK9k+qNFUR5X+cKL9EIR+ZOhtIloNl9GIKS57V1MyNsYpYcUrUeQc9vNfzsWfV28IaLL3i96P9sdNyeRssA==" crossorigin="anonymous" />
@@ -299,7 +299,7 @@
 
                         <li class="list-item">
 
-                            <span class="list-link">hello@picbyadam.net</span>
+                            <span class="list-link">hello@picbyadam.com</span>
                             
                         </li>
 
