--- a/portfolio/people/index.html
+++ b/portfolio/people/index.html
@@ -129,7 +129,7 @@
 
     <header class="header-w-divider portraits-bg">
 
-        <h1 class="page-title">Portraits & People</h1>
+        <h1 class="page-title">People & Events</h1>
 
         <div class="divider"></div>
 
