--- a/portfolio/products/index.html
+++ b/portfolio/products/index.html
@@ -129,7 +129,7 @@
 
     <header class="header-w-divider products-bg">
 
-        <h1 class="page-title">Products &amp; Objects</h1>
+        <h1 class="page-title">Products &amp; Clothes</h1>
 
         <div class="divider"></div>
 
